refactory meldlisten, vorbereitung für schweizer system kleine bugfix beim clean html für liga html generator, downlaod link für pdf dokumenten fehlt